# emotegan

./: README.md  Trainer.py  pyproject.toml
.github/workflows/: update_gifs_json.yml
data_collection/: README.md  emote_scaper.py  preprocess.py  top_streamers.py  top_streamers.txt
docs/: gifs.json  index.html  update_json.py
model/: Discriminator.py  Generator copy.py  Generator.py  Layers.py
website/: update_json.py
